# webrtc-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  webrtc-prepare.bat  webrtc-prepare.sh
src/: main.cpp
src/call/: CallController.cpp  CallController.hpp  RequestSenderInterface.hpp
src/network/: HttpClient.cpp  HttpClient.hpp  HttpRequestHandler.cpp  HttpRequestHandler.hpp  HttpRequestHandlerFactory.cpp  HttpRequestHandlerFactory.hpp  RequestHandlerInterface.hpp  Server.cpp  Server.hpp
src/render/: FrameConsumerInterface.hpp  FrameProducer.cpp  FrameProducer.hpp  SDLRenderer.cpp  SDLRenderer.hpp
